--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   responsive_builder: ^0.7.1
   url_launcher: ^6.3.1
   flutter_svg: ^2.0.13
+  iconsax_flutter: ^1.0.0
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
